converted to geopandas dataframe

--- a/notebooks/Fetcher.ipynb
+++ b/notebooks/Fetcher.ipynb
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -359,6 +359,36 @@
        "      <td>2</td>\n",
        "      <td>POINT (446429.33 4653271.57)</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>295.37</td>\n",
+       "      <td>2</td>\n",
+       "      <td>POINT (446425.71 4653272.04)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>295.41</td>\n",
+       "      <td>2</td>\n",
+       "      <td>POINT (446423.88 4653272.28)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>294.78</td>\n",
+       "      <td>2</td>\n",
+       "      <td>POINT (446415.7 4653272.47)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>294.79</td>\n",
+       "      <td>2</td>\n",
+       "      <td>POINT (446417.53 4653272.22)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>295.48</td>\n",
+       "      <td>2</td>\n",
+       "      <td>POINT (446419.37 4653271.94)</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -369,16 +399,21 @@
        "1       294.99               2  POINT (446436.62 4653270.58)\n",
        "2       294.92               2   POINT (446434.8 4653270.83)\n",
        "3       295.06               2     POINT (446433 4653271.07)\n",
-       "4       294.81               2  POINT (446429.33 4653271.57)"
+       "4       294.81               2  POINT (446429.33 4653271.57)\n",
+       "5       295.37               2  POINT (446425.71 4653272.04)\n",
+       "6       295.41               2  POINT (446423.88 4653272.28)\n",
+       "7       294.78               2   POINT (446415.7 4653272.47)\n",
+       "8       294.79               2  POINT (446417.53 4653272.22)\n",
+       "9       295.48               2  POINT (446419.37 4653271.94)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gdf.head()"
+    "gdf.head(10)"
    ]
   },
   {
